--- a/Benchmarks-Optimization.mediawiki
+++ b/Benchmarks-Optimization.mediawiki
@@ -8,7 +8,7 @@
 
 
 === Optimization === 
-* [http://juliaopt.org/ JuliaOpt] is an umbrella group for Julia-based optimization-related projects.
+* [http://juliaopt.org/ JuliaOpt] is an umbrella group for Julia-based optimization-related projects, with its own [https://groups.google.com/forum/#!forum/julia-opt julia-opt mailing list] at Google groups. 
 * [https://github.com/Staross/JuliaCMAES CMA-ES port] - a mix of the original minimal matlab implementation (purecmaes.m) and the full one (cmaes.m).
 * [https://github.com/robertfeldt/BlackBoxOptim.jl BlackBoxOptim.jl] is a (experimental, work-in-progress) global optimization framework for Julia, supporting both multi- and single-objective optimization problems, focused on (meta-)heuristic/stochastic algorithms (DE, PSO, CMA-ES etc).
 * CPLEXLink.jl:: [https://github.com/joehuchette/CPLEXLink.jl is a Julia interface for the CPLEX optimization software]. 
