--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -11,4 +11,5 @@
 
 # i18n-L10n
 ### Chinese
+* JuliaCN :: [JuliaCN group on github](https://github.com/JuliaCN)
 * julia_zh_cn :: [Simplified Chinese Documentation of Julia](https://github.com/JuliaCN/julia_zh_cn)
