[translation] PT-BR and ES-LA

--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -2,7 +2,7 @@
 
 * [UNICODE](#unicode)
 * [i18n-L10n](#i18n-L10n)
-   * [Chinese](#chinese)
+
 
 # UNICODE
 * ICU.jl :: Julia wrapper for the [International Components for Unicode (ICU) library](https://github.com/nolta/ICU.jl).
@@ -10,6 +10,8 @@
 * UTF16.jl :: [UTF16 string type](https://github.com/nolta/UTF16.jl) for Julia.
 
 # i18n-L10n
-### Chinese
-* JuliaCN :: [JuliaCN group on github](https://github.com/JuliaCN)
-* julia_zh_cn :: [Simplified Chinese Documentation of Julia](https://github.com/JuliaCN/julia_zh_cn)
+* Brazilian Portugese (PT-BR) :: [Documentação de Julia](http://julia-pt-br.readthedocs.org/pt_BR/release-0.2/)
+* Chinese, (julia_zh_cn) :: [Simplified Chinese Documentation of Julia](https://github.com/JuliaCN/julia_zh_cn) and the [JuliaCN group on github](https://github.com/JuliaCN).
+* Spanish Latin (ES-LA) :: [A Latin Spanish translation of the Julia documentation](http://julia-es-la.readthedocs.org/es/latest/) and the [Github repo](https://github.com/lbenitesanchez/julia-doc-es-la)
+
+
