--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -2,6 +2,7 @@
 
 * [UNICODE](#unicode)
 * [i18n-L10n](#i18n-L10n)
+   * [YAJO](#yajo)
 
 
 # UNICODE
@@ -11,7 +12,10 @@
 
 # i18n-L10n
 * Brazilian Portugese (PT-BR) :: [Documentação de Julia](http://julia-pt-br.readthedocs.org/pt_BR/release-0.2/)
-* Chinese, (julia_zh_cn) :: [Simplified Chinese Documentation of Julia](https://github.com/JuliaCN/julia_zh_cn) and the [JuliaCN group on github](https://github.com/JuliaCN).
+* Chinese, (julia_zh_cn) :: [Simplified Chinese Documentation of Julia](https://github.com/JuliaCN/julia_zh_cn) 
 * Spanish Latin (ES-LA) :: [A Latin Spanish translation of the Julia documentation](http://julia-es-la.readthedocs.org/es/latest/) and the [Github repo](https://github.com/lbenitesanchez/julia-doc-es-la)
+
+### YAJO
+* The [JuliaCN group on github](https://github.com/JuliaCN).
 
 
