@Ismael-VC : Spanish lang julia translation on Transifex

--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -2,7 +2,6 @@
 
 * [UNICODE](#unicode)
 * [i18n-L10n](#i18n-L10n)
-   * [YAJO](#yajo)
 
 
 # UNICODE
@@ -14,9 +13,8 @@
 # i18n-L10n
 * Brazilian Portugese (PT-BR) :: [Documentação de Julia](http://julia-pt-br.readthedocs.org/pt_BR/release-0.2/)
 * Chinese, (julia_zh_cn) :: [Simplified Chinese Documentation of Julia](https://github.com/JuliaCN/julia_zh_cn) 
+   * The [JuliaCN group on github](https://github.com/JuliaCN).
 * Spanish Latin (ES-LA) :: [A Latin Spanish translation of the Julia documentation](http://julia-es-la.readthedocs.org/es/latest/) and the [Github repo](https://github.com/lbenitesanchez/julia-doc-es-la)
-
-### YAJO
-* The [JuliaCN group on github](https://github.com/JuliaCN).
+* [Spanish](https://github.com/Ismael-VC/julia/tree/julia-translations/doc) language translation of julialang docs on [Transifex](https://www.transifex.com/projects/p/julia-doc/) 
 
 
