@garrison : Gettext.jl

--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -1,22 +1,35 @@
-*Toolboxes for transliteration efforts, Internationalisation (i18n) and Localisation (L10n)*
+**Toolboxes for transliteration efforts, Internationalisation (i18n) and Localisation (L10n)**
 
-* [UNICODE](#unicode)
-* [i18n-L10n](#i18n-L10n)
-
+* [i18n-L10n TOOLS](#i18n-l10n-tools)
+   * [Unicode](#unicode)
+* [LANGUAGES](#languages)
+   * [Chinese](#chinese)
+   * [Portugese](#portugese)
+   * [Spanish](#spanish)
+   
 ----
 
-# UNICODE
-* ICU.jl :: Julia wrapper for the [International Components for Unicode (ICU) library](https://github.com/nolta/ICU.jl).
-* UnicodeExtras.jl :: [Another Unicode package](https://github.com/nolta/UnicodeExtras.jl)
-* UTF16.jl :: [UTF16 string type](https://github.com/nolta/UTF16.jl) for Julia.
+# i18n-L10n TOOLS 
+* [Gettext.jl](https://github.com/garrison/Gettext.jl) :: i18n for Julia.
+
+### Unicode
+* [ICU.jl](https://github.com/nolta/ICU.jl) :: Julia wrapper for the International Components for Unicode (ICU) library.
+* [UnicodeExtras.jl](https://github.com/nolta/UnicodeExtras.jl) :: Another Unicode package.
+* [UTF16.jl](https://github.com/nolta/UTF16.jl) :: UTF16 string type for Julia.
 * [Shapecatcher.com](http://shapecatcher.com/) is a Unicode character recognition website.
 
 ----
 
-# i18n-L10n
-* Brazilian Portugese (PT-BR) :: [Documentação de Julia](http://julia-pt-br.readthedocs.org/pt_BR/release-0.2/)
+# LANGUAGES
+
+### Chinese
 * Chinese, (julia_zh_cn) :: [Simplified Chinese Documentation of Julia](https://github.com/JuliaCN/julia_zh_cn) 
    * The [JuliaCN group on github](https://github.com/JuliaCN).
+
+### Portugese
+* Brazilian Portugese (PT-BR) :: [Documentação de Julia](http://julia-pt-br.readthedocs.org/pt_BR/release-0.2/)
+
+### Spanish
 * Spanish Latin (ES-LA) :: [A Latin Spanish translation of the Julia documentation](http://julia-es-la.readthedocs.org/es/latest/) and the [Github repo](https://github.com/lbenitesanchez/julia-doc-es-la)
 * [Spanish](https://github.com/Ismael-VC/julia/tree/julia-translations/doc) language translation of julialang docs on [Transifex](https://www.transifex.com/projects/p/julia-doc/) 
 
