Julia Ferraioli on using Julia on GCE

--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -31,6 +31,6 @@
 
 ### Spanish
 * Spanish Latin (ES-LA) :: [A Latin Spanish translation of the Julia documentation](http://julia-es-la.readthedocs.org/es/latest/) and the [Github repo](https://github.com/lbenitesanchez/julia-doc-es-la)
-* [Spanish](https://github.com/Ismael-VC/julia/tree/julia-translations/doc) language translation of julialang docs on [Transifex](https://www.transifex.com/projects/p/julia-doc/) 
+* [Spanish](https://github.com/Ismael-VC/julia/tree/julia-translations/doc) language translation of julialang docs on [Transifex](https://www.transifex.com/projects/p/julia-doc/). See this julia-users thread for [workflow instructions](https://groups.google.com/d/msg/julia-users/M0NP1qMZ6yk/_wp9-A3Z8NIJ) and the [Sphinx internationalization](http://sphinx-doc.org/latest/intl.html) page for translation documentation.
 
 
