@iTakeshi : julia_doc_ja

--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -4,6 +4,7 @@
    * [Unicode](#unicode)
 * [LANGUAGES](#languages)
    * [Chinese](#chinese)
+   + [Japanese](#japanese)
    * [Portugese](#portugese)
    * [Spanish](#spanish)
    
@@ -23,14 +24,17 @@
 # LANGUAGES
 
 ### Chinese
-* Chinese, (julia_zh_cn) :: [Simplified Chinese Documentation of Julia](https://github.com/JuliaCN/julia_zh_cn) 
+* [julia_zh_cn](https://github.com/JuliaCN/julia_zh_cn) :: Simplified Chinese Documentation of Julia.
    * The [JuliaCN group on github](https://github.com/JuliaCN).
 
+### Japanese
++ [julia_doc_ja](https://github.com/iTakeshi/julia_doc_ja) :: Japanese documentation.
+
 ### Portugese
-* Brazilian Portugese (PT-BR) :: [Documentação de Julia](http://julia-pt-br.readthedocs.org/pt_BR/release-0.2/)
+* [Brazilian Portugese](http://julia-pt-br.readthedocs.org/pt_BR/release-0.2/) (PT-BR) Documentação de Julia.
 
 ### Spanish
-* Spanish Latin (ES-LA) :: [A Latin Spanish translation of the Julia documentation](http://julia-es-la.readthedocs.org/es/latest/) and the [Github repo](https://github.com/lbenitesanchez/julia-doc-es-la)
+* [Spanish Latin (ES-LA)](https://github.com/lbenitesanchez/julia-doc-es-la) :: A Latin Spanish translation of the Julia [documentation](http://julia-es-la.readthedocs.org/es/latest/)
 * [Spanish](https://github.com/Ismael-VC/julia/tree/julia-translations/doc) language translation of julialang docs on [Transifex](https://www.transifex.com/projects/p/julia-doc/). See this julia-users thread for [workflow instructions](https://groups.google.com/d/msg/julia-users/M0NP1qMZ6yk/_wp9-A3Z8NIJ) and the [Sphinx internationalization](http://sphinx-doc.org/latest/intl.html) page for translation documentation.
 
 
