--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -1,5 +1,6 @@
 **Toolboxes for transliteration efforts, Internationalisation (i18n) and Localisation (L10n)**
 
++ [Community](#community)
 * [i18n-L10n TOOLS](#i18n-l10n-tools)
    * [Unicode](#unicode)
 * [LANGUAGES](#languages)
@@ -8,6 +9,11 @@
    * [Portugese](#portugese)
    * [Spanish](#spanish)
    
+----
+
+# Community
++ The [julia-i18n](https://gitter.im/JuliaLangEs/julia-i18n) IRC Gitter channel for discussions regarding the internationalization of Julia.
+
 ----
 
 # i18n-L10n TOOLS 
