--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -8,6 +8,7 @@
    + [Japanese](#japanese)
    * [Portugese](#portugese)
    * [Spanish](#spanish)
++ [Other Sites](#other-sites)
    
 ----
 
@@ -20,10 +21,10 @@
 * [Gettext.jl](https://github.com/garrison/Gettext.jl) :: i18n for Julia.
 
 ### Unicode
-* [ICU.jl](https://github.com/nolta/ICU.jl) :: Julia wrapper for the International Components for Unicode (ICU) library.
-* [UnicodeExtras.jl](https://github.com/nolta/UnicodeExtras.jl) :: Another Unicode package.
-* [UTF16.jl](https://github.com/nolta/UTF16.jl) :: UTF16 string type for Julia.
-* [Shapecatcher.com](http://shapecatcher.com/) is a Unicode character recognition website.
++ [ICU.jl](https://github.com/nolta/ICU.jl) :: Julia wrapper for the International Components for Unicode (ICU) library.
++ [UnicodeExtras.jl](https://github.com/nolta/UnicodeExtras.jl) :: Another Unicode package.
++ [UTF16.jl](https://github.com/nolta/UTF16.jl) :: UTF16 string type for Julia.
++ [UnicodePlots.jl](https://github.com/Evizero/UnicodePlots.jl) :: Unicode plotting for the REPL in Julia.
 
 ----
 
@@ -43,4 +44,9 @@
 * [Spanish Latin (ES-LA)](https://github.com/lbenitesanchez/julia-doc-es-la) :: A Latin Spanish translation of the Julia [documentation](http://julia-es-la.readthedocs.org/es/latest/)
 * [Spanish](https://github.com/Ismael-VC/julia/tree/julia-translations/doc) language translation of julialang docs on [Transifex](https://www.transifex.com/projects/p/julia-doc/). See this julia-users thread for [workflow instructions](https://groups.google.com/d/msg/julia-users/M0NP1qMZ6yk/_wp9-A3Z8NIJ) and the [Sphinx internationalization](http://sphinx-doc.org/latest/intl.html) page for translation documentation.
 
+----
+
+# Other Sites
+
++ [Shapecatcher.com](http://shapecatcher.com/) is a Unicode character recognition website.
 
