@chezou : MeCab.jl

--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -1,13 +1,13 @@
 **Toolboxes for transliteration efforts, Internationalisation (i18n) and Localisation (L10n)**
 
 + [Community](#community)
-* [i18n-L10n TOOLS](#i18n-l10n-tools)
-   * [Unicode](#unicode)
-* [LANGUAGES](#languages)
-   * [Chinese](#chinese)
++ [i18n-L10n TOOLS](#i18n-l10n-tools)
+   + [Unicode](#unicode)
++ [LANGUAGES](#languages)
+   + [Chinese](#chinese)
    + [Japanese](#japanese)
-   * [Portugese](#portugese)
-   * [Spanish](#spanish)
+   + [Portugese](#portugese)
+   + [Spanish](#spanish)
 + [Other Sites](#other-sites)
    
 ----
