@KDr2 : JetAlpha.jl

--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -30,8 +30,9 @@
 # LANGUAGES
 
 ### Chinese
-* [julia_zh_cn](https://github.com/JuliaCN/julia_zh_cn) :: Simplified Chinese Documentation of Julia.
-   * The [JuliaCN group on github](https://github.com/JuliaCN).
++ [julia_zh_cn](https://github.com/JuliaCN/julia_zh_cn) :: Simplified Chinese Documentation of Julia.
+   + The [JuliaCN group on github](https://github.com/JuliaCN).
++ [JetAlpha](http://jetalpha.org/) :: A Julia playground (in Chinese) for Julians. [Source Code](https://github.com/KDr2/JetAlpha.jl).
 
 ### Japanese
 + [julia_doc_ja](https://github.com/iTakeshi/julia_doc_ja) :: Japanese documentation.
