--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -30,6 +30,7 @@
 # LANGUAGES
 
 ### Chinese
++ [julialang.cn](http://julialang.cn/) :: Simplified Chinese homepage for Chinese julians and community
 + [julia_zh_cn](https://github.com/JuliaCN/julia_zh_cn) :: Simplified Chinese Documentation of Julia.
    + The [JuliaCN group on github](https://github.com/JuliaCN).
 + [JetAlpha](http://jetalpha.org/) :: A Julia playground (in Chinese) for Julians. [Source Code](https://github.com/KDr2/JetAlpha.jl).
