Add LegacyStrings.jl? Drop UTF16.jl?
UTF16.jl seems just some small test?

--- a/i18n-L10n.md
+++ b/i18n-L10n.md
@@ -23,7 +23,7 @@
 ### Unicode
 + [ICU.jl](https://github.com/nolta/ICU.jl) :: Julia wrapper for the International Components for Unicode (ICU) library.
 + [UnicodeExtras.jl](https://github.com/nolta/UnicodeExtras.jl) :: Another Unicode package.
-+ [UTF16.jl](https://github.com/nolta/UTF16.jl) :: UTF16 string type for Julia.
++ [LegacyStrings.jl](https://github.com/JuliaArchive/LegacyStrings.jl) :: Support for e.g. UTF16 string type for Julia (that was moved out of the standard library; however, Julia still works on Windows, without it).
 
 ----
 
